title change (no ai this time)

--- a/main.html
+++ b/main.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>✨ Anori FreakTab ✨</title>
+<title>freaktab !!</title>
 <style>
     * { box-sizing: border-box; margin:0; padding:0; }
     body {
-        font-family: 'Poppins', sans-serif;
+        font-family: 'monospace', sans-serif;
         height:100vh; overflow:hidden; color:#fff;
         display:flex; justify-content:center; align-items:center;
         background:#0a0a0a;
@@ -18,8 +18,8 @@
     body::before {
         content:"";
         position:absolute; inset:0;
-        background:url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1920&q=80') center/cover no-repeat;
-        filter: blur(16px) brightness(0.5) saturate(1.5);
+        background:url('https://www.muchbetteradventures.com/magazine/content/images/2024/04/mount-everest-at-sunset.jpg?auto=format&fit=crop&w=1920&q=80') center/cover no-repeat;
+        filter: blur(2px) brightness(0.3) saturate(0.77);
         z-index:-3;
         animation: zoom 40s ease-in-out infinite alternate;
         transform: scale(1.1);
@@ -116,12 +116,12 @@
 </head>
 <body>
     <div class="navbar">
-        <h2>✨ Anori FreakTab v2.0 ✨</h2>
+        <h2>✨ freaktab ✨</h2>
         <div class="clock" id="clock">--:--:--</div>
     </div>
 
     <div class="glass">
-        <h1>BoomsunaLover221's Anori Tab !!</h1>
+        <h1>BoomsunaLover221's Tab !!</h1>
         <div class="datetime" id="datetime"></div>
         <p>search up smth !! (or else) </p>
 
