--- a/main.html
+++ b/main.html
@@ -109,7 +109,7 @@
 </head>
 <body>
     <!-- Background YouTube Video -->
-    <iframe id="bg-video" src="https://www.youtube.com/embed/nj2vwu0LeG8?autoplay=1&mute=1&controls=0&loop=1&playlist=nj2vwu0LeG8" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+    <iframe id="bg-video" src="https://lovetornangel.github.io/newtab/wiggle.mp4" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 
     <div class="navbar">
         <h2>✨ freaktab ✨</h2>
