--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
         content:"";
         position:absolute; inset:0;
         background:url('https://www.muchbetteradventures.com/magazine/content/images/2024/04/mount-everest-at-sunset.jpg?auto=format&fit=crop&w=1920&q=80') center/cover no-repeat;
-        filter: blur(2px) brightness(0.3) saturate(0.77);
+        filter: blur(2px) brightness(0.1) saturate(0.33);
         z-index:-3;
         animation: zoom 40s ease-in-out infinite alternate;
         transform: scale(1.1);
@@ -42,7 +42,7 @@
     /* Navbar */
     .navbar {
         position:fixed; top:0; width:100%; display:flex; justify-content:space-between; align-items:center;
-        padding:14px 40px; backdrop-filter: blur(20px) saturate(180%);
+        padding:14px 40px; backdrop-filter: blur(5px) saturate(180%);
         background: rgba(255,255,255,0.08); border-bottom:1px solid rgba(255,255,255,0.15);
         box-shadow: 0 5px 30px rgba(0,0,0,0.25); z-index:10;
     }
@@ -52,7 +52,7 @@
     /* Glass Card */
     .glass {
         margin-top:6vh; background: rgba(255,255,255,0.06);
-        border-radius: 28px; padding:60px 60px; text-align:center;
+        border-radius: 12px; padding:60px 60px; text-align:center;
         backdrop-filter: blur(25px) saturate(180%);
         border:1px solid rgba(255,255,255,0.15);
         box-shadow: 0 20px 60px rgba(0,0,0,0.45);
@@ -117,7 +117,8 @@
 <body>
     <div class="navbar">
         <h2>✨ freaktab ✨</h2>
-        <div class="clock" id="clock">--:--:--</div>
+       <h1>✨ uhh yeah ✨</h1>
+        <div class="clock" id="clock"> --> --:--:-- <-- </div>
     </div>
 
     <div class="glass">
