--- a/main.html
+++ b/main.html
@@ -3,164 +3,295 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>freaktab !!</title>
+<title>freaktab ULTRA+</title>
 <style>
-    * { box-sizing: border-box; margin:0; padding:0; }
-    body {
-        font-family: 'monospace', sans-serif;
-        height:100vh; overflow:hidden; color:#fff;
-        display:flex; justify-content:center; align-items:center;
-        background:#0a0a0a;
+    *{box-sizing:border-box;margin:0;padding:0;}
+    body{
+        font-family:'monospace',sans-serif;
+        color:#fff;
+        height:100vh;overflow-y:auto;
+        background:#080808;
+        display:flex;flex-direction:column;align-items:center;
         position:relative;
     }
 
-    /* Background with animated holo orbs */
-    body::before {
+    body::before{
         content:"";
-        position:absolute; inset:0;
-        background:url('https://www.muchbetteradventures.com/magazine/content/images/2024/04/mount-everest-at-sunset.jpg?auto=format&fit=crop&w=1920&q=80') center/cover no-repeat;
-        filter: blur(2px) brightness(0.1) saturate(0.33);
+        position:absolute;inset:0;
+        background:url('https://images.unsplash.com/photo-1501785888041-af3ef285b470?auto=format&fit=crop&w=1920&q=80') center/cover no-repeat;
+        filter:blur(3px) brightness(0.2);
         z-index:-3;
-        animation: zoom 40s ease-in-out infinite alternate;
-        transform: scale(1.1);
+        animation:zoom 40s ease-in-out infinite alternate;
     }
+    @keyframes zoom{from{transform:scale(1);}to{transform:scale(1.1);}}
 
-    @keyframes zoom { from{transform:scale(1.05);} to{transform:scale(1.15);} }
-
-    body::after {
+    body::after{
         content:"";
-        position:absolute; inset:0;
-        background: radial-gradient(circle at 20% 30%, rgba(180,90,255,0.15), transparent 60%),
-                    radial-gradient(circle at 80% 70%, rgba(255,150,100,0.18), transparent 60%);
-        animation: floatGlow 12s ease-in-out infinite alternate, hueShift 40s linear infinite;
+        position:absolute;inset:0;
+        background:radial-gradient(circle at 30% 40%,rgba(200,100,255,0.25),transparent 70%),
+                   radial-gradient(circle at 70% 70%,rgba(255,150,120,0.25),transparent 60%);
         z-index:-2;
+        animation:hueShift 30s linear infinite;
     }
+    @keyframes hueShift{0%{filter:hue-rotate(0deg);}100%{filter:hue-rotate(360deg);}}
 
-    @keyframes floatGlow {0%{transform:translateY(0);opacity:0.8;}100%{transform:translateY(-30px);opacity:1;}}
-    @keyframes hueShift {0%{filter:hue-rotate(0deg);}100%{filter:hue-rotate(360deg);}}
-
-    /* Navbar */
-    .navbar {
-        position:fixed; top:0; width:100%; display:flex; justify-content:space-between; align-items:center;
-        padding:14px 40px; backdrop-filter: blur(5px) saturate(180%);
-        background: rgba(255,255,255,0.08); border-bottom:1px solid rgba(255,255,255,0.15);
-        box-shadow: 0 5px 30px rgba(0,0,0,0.25); z-index:10;
+    .navbar{
+        position:fixed;top:0;width:100%;
+        display:flex;justify-content:space-between;align-items:center;
+        padding:12px 36px;
+        backdrop-filter:blur(5px) saturate(180%);
+        background:rgba(255,255,255,0.05);
+        border-bottom:1px solid rgba(255,255,255,0.1);
+        z-index:10;
     }
-    .navbar h2 { font-size:1.1rem; opacity:0.85; }
-    .clock { font-family:'Share Tech Mono', monospace; font-size:1.2rem; opacity:0.9; }
+    .clock{font-size:1.2rem;opacity:0.9;}
+    .navbar h2{opacity:0.85;}
 
-    /* Glass Card */
-    .glass {
-        margin-top:6vh; background: rgba(255,255,255,0.06);
-        border-radius: 12px; padding:60px 60px; text-align:center;
-        backdrop-filter: blur(25px) saturate(180%);
-        border:1px solid rgba(255,255,255,0.15);
-        box-shadow: 0 20px 60px rgba(0,0,0,0.45);
-        animation: fadeIn 1.5s ease, pulseGlass 6s ease-in-out infinite;
-        transition: transform 0.5s ease;
+    h1{
+        font-size:3rem;
+        margin-top:80px;
+        background:linear-gradient(90deg,#AB79D9,#FAB9DA,#EDDD53);
+        -webkit-background-clip:text;
+        -webkit-text-fill-color:transparent;
+        animation:glitch 2s infinite;
     }
-    .glass:hover { transform: scale(1.03); }
-
-    @keyframes fadeIn { from {opacity:0; transform:scale(0.95);} to{opacity:1; transform:scale(1);} }
-    @keyframes pulseGlass {0%,100%{transform:scale(1);}50%{transform:scale(1.02);}}
-
-    h1 {
-        font-size:3rem; margin-bottom:10px;
-        background: linear-gradient(90deg,#AB79D9,#FAB9DA,#EDDD53);
-        -webkit-background-clip:text; -webkit-text-fill-color:transparent;
-        animation: glitchText 2s infinite;
-    }
-
-    @keyframes glitchText {
-        0%,100%{transform:none;} 
-        25%{transform:translate(2px,-2px);} 
-        50%{transform:translate(-2px,2px);} 
+    @keyframes glitch{
+        0%,100%{transform:none;}
+        25%{transform:translate(2px,-2px);}
+        50%{transform:translate(-2px,2px);}
         75%{transform:translate(2px,2px);}
     }
 
-    .datetime { font-size:1.1rem; opacity:0.85; margin-bottom:20px; }
-    p { font-size:1.1rem; opacity:0.9; margin-bottom:28px; }
+    .top-widgets{
+        display:flex;gap:20px;flex-wrap:wrap;justify-content:center;
+        margin:20px 0;
+    }
+    .mini{
+        background:rgba(255,255,255,0.06);
+        border:1px solid rgba(255,255,255,0.1);
+        backdrop-filter:blur(15px);
+        border-radius:12px;
+        padding:14px 20px;
+        text-align:center;
+        width:180px;
+        box-shadow:0 5px 25px rgba(0,0,0,0.4);
+        transition:0.3s;
+    }
+    .mini:hover{transform:scale(1.05);}
 
-    .search-box {
-        width:360px; padding:14px 20px; border-radius:12px;
-        border:none; outline:none; background: rgba(255,255,255,0.12);
-        color:#fff; font-size:1.05rem; transition:0.3s ease; box-shadow:0 4px 15px rgba(0,0,0,0.2);
+    .search-section{
+        width:80%;
+        max-width:800px;
+        text-align:center;
+        margin:30px auto;
     }
-    .search-box::placeholder { color: rgba(255,255,255,0.7); }
-    .search-box:focus { background: rgba(0,0,0,0.3); transform:scale(1.05); }
+    .search-box{
+        width:100%;
+        padding:20px 25px;
+        font-size:1.4rem;
+        border:none;
+        border-radius:16px;
+        background:rgba(255,255,255,0.1);
+        color:#fff;
+        outline:none;
+        box-shadow:0 0 25px rgba(255,255,255,0.1);
+        transition:0.3s;
+    }
+    .search-box:focus{background:rgba(0,0,0,0.3);box-shadow:0 0 40px rgba(255,255,255,0.2);transform:scale(1.02);}
 
-    /* Links */
-    .links { display:flex; justify-content:center; gap:24px; margin-top:32px; flex-wrap:wrap; }
-    .link {
-        background: rgba(255,255,255,0.1); border:1px solid rgba(255,255,255,0.15);
-        border-radius:16px; padding:12px 18px; color:#fff; text-decoration:none;
-        font-weight:500; display:flex; align-items:center; gap:10px;
-        transition:0.25s ease; box-shadow:0 4px 12px rgba(0,0,0,0.15);
+    .grid{
+        display:grid;
+        grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+        gap:20px;
+        width:85%;
+        margin-bottom:60px;
     }
-    .link:hover {
-        background: linear-gradient(135deg,#AB79D9,#FAB9DA,#EDDD53);
-        -webkit-background-clip:text; -webkit-text-fill-color:transparent;
-        transform: translateY(-3px) scale(1.05);
-        box-shadow:0 6px 25px rgba(0,0,0,0.25);
+    .tool{
+        background:rgba(255,255,255,0.06);
+        border:1px solid rgba(255,255,255,0.1);
+        border-radius:16px;
+        padding:20px;
+        backdrop-filter:blur(15px);
+        box-shadow:0 5px 30px rgba(0,0,0,0.35);
+        transition:0.3s;
+        text-align:center;
     }
-    .link img { width:20px; height:20px; filter:brightness(0) invert(1); transition: transform 0.4s ease; }
-    .link:hover img { transform: rotate(15deg) scale(1.2) translateY(-3px); }
+    .tool:hover{transform:scale(1.03);}
+    .tool h3{margin-bottom:10px;}
 
-    @media (max-width:600px){
-        .glass { width:90%; padding:40px 24px; }
-        h1 { font-size:2.2rem; }
-        .search-box { width:100%; }
-        .links { gap:16px; }
+    input,textarea{
+        background:rgba(255,255,255,0.1);
+        border:none;
+        border-radius:8px;
+        color:#fff;
+        padding:8px;
+        width:90%;
+        margin-bottom:8px;
+        font-family:inherit;
     }
+    button{
+        background:rgba(255,255,255,0.2);
+        border:none;
+        border-radius:8px;
+        color:#fff;
+        padding:8px 12px;
+        cursor:pointer;
+    }
+    button:hover{background:rgba(255,255,255,0.3);}
 </style>
 </head>
 <body>
     <div class="navbar">
-        <h2>✨ freaktab ✨</h2>
-       <h1>✨ uhh yeah ✨</h1>
-        <div class="clock" id="clock"> --> --:--:-- <-- </div>
+        <h2>⚡ freaktab ULTRA+</h2>
+        <div class="clock" id="clock"></div>
     </div>
 
-    <div class="glass">
-        <h1>BoomsunaLover221's Tab !!</h1>
-        <div class="datetime" id="datetime"></div>
-        <p>search up smth !! (or else) </p>
+    <h1>Welcome, BoomSunaLover221 😎</h1>
 
-        <form action="https://www.google.com/search" method="get" target="_blank" autocomplete="off">
-            <input type="text" name="q" class="search-box" placeholder="Search Google..." autofocus>
+    <div class="top-widgets">
+        <div class="mini" id="weather">🌦️ Loading weather...</div>
+        <div class="mini" id="quote">💬 Loading quote...</div>
+        <div class="mini">📅 <span id="date">--</span></div>
+    </div>
+
+    <div class="search-section">
+        <form action="https://www.google.com/search" target="_blank">
+            <input type="text" name="q" class="search-box" placeholder="Search the multiverse..." autofocus>
         </form>
+    </div>
 
-        <div class="links">
-            <a href="https://github.com" class="link" target="_blank">
-                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/github.svg" alt="GitHub"> Gitbub!11
-            </a>
-            <a href="https://youtube.com" class="link" target="_blank">
-                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/youtube.svg" alt="YouTube"> Yub Tub
-            </a>
-            <a href="https://knowledgehook.com" class="link" target="_blank">
-                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/googleclassroom.svg" alt="KH"> Knowledgehook
-            </a>
-            <a href="https://gmail.com" class="link" target="_blank">
-                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/gmail.svg" alt="Gmail"> Gee Gamil
-            </a>
-            <a href="https://wikipedia.org" class="link" target="_blank">
-                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/wikipedia.svg" alt="Wiki"> Wikipedia
-            </a>
+    <div class="grid">
+        <div class="tool">
+            <h3>📝 To-Do</h3>
+            <input id="todoInput" placeholder="New task...">
+            <button onclick="addTodo()">Add</button>
+            <ul id="todoList" style="list-style:none;padding:0;"></ul>
+        </div>
+
+        <div class="tool">
+            <h3>🗒️ Notes</h3>
+            <textarea id="notes" rows="5" placeholder="Write your chaotic thoughts..."></textarea>
+        </div>
+
+        <div class="tool">
+            <h3>🧮 Calculator</h3>
+            <input id="calc" placeholder="e.g. 5*8+2">
+            <button onclick="calcResult()">=</button>
+            <div id="calcOut"></div>
+        </div>
+
+        <div class="tool">
+            <h3>⏰ Timer</h3>
+            <input id="timerSec" type="number" placeholder="Seconds...">
+            <button onclick="startTimer()">Start</button>
+            <div id="timerOut">Ready.</div>
+        </div>
+
+        <div class="tool">
+            <h3>🎭 Random Joke</h3>
+            <p id="joke">Loading...</p>
+            <button onclick="newJoke()">New Joke</button>
+        </div>
+
+        <div class="tool">
+            <h3>🔄 Converter (cm → inch)</h3>
+            <input id="conv" type="number" placeholder="cm">
+            <button onclick="convert()">Convert</button>
+            <div id="convOut"></div>
+        </div>
+
+        <div class="tool">
+            <h3>🎶 Music Player</h3>
+            <audio controls style="width:100%;">
+                <source src="https://files.freemusicarchive.org/storage-freemusicarchive-org/tracks/yoS6Oa63RPdlAtboXHnNKXzIr6hD6j08D9vZzDqW.mp3" type="audio/mp3">
+            </audio>
+        </div>
+
+        <div class="tool">
+            <h3>📆 Mini Calendar</h3>
+            <div id="calendar"></div>
         </div>
     </div>
 
-    <script>
-        function updateClock(){
-            const now = new Date();
-            const time = now.toLocaleTimeString([], {hour:'2-digit', minute:'2-digit', second:'2-digit'});
-            document.getElementById('clock').textContent = time;
+<script>
+    function updateClock(){
+        const now=new Date();
+        document.getElementById("clock").textContent=now.toLocaleTimeString();
+        document.getElementById("date").textContent=now.toDateString();
+    }
+    setInterval(updateClock,1000);updateClock();
 
-            const options = { weekday:'long', month:'long', day:'numeric', year:'numeric' };
-            const date = now.toLocaleDateString(undefined, options);
-            document.getElementById('datetime').textContent = date;
+    const quotes=[
+        "“Stay freaky. Stay legendary.”",
+        "“Rizz never sleeps, only reloads.”",
+        "“Every tab you open is another reality.”",
+        "“Mew your limits, gyatt your goals.”",
+        "“Even Ohio can’t contain this energy.”"
+    ];
+    document.getElementById("quote").textContent=quotes[Math.floor(Math.random()*quotes.length)];
+
+    const jokes=[
+        "Why did the web developer go broke? Because he used up all his cache!",
+        "I told my computer I needed a break—it said no problem, it’ll go to sleep.",
+        "JavaScript developers never die, they just get undefined.",
+        "CSS walked into a bar. A class was like 'You look so styled!'",
+        "Why did the AI date the user? It couldn’t resist the freaky vibes."
+    ];
+    function newJoke(){document.getElementById("joke").textContent=jokes[Math.floor(Math.random()*jokes.length)];}
+    newJoke();
+
+    function addTodo(){
+        const inp=document.getElementById("todoInput");
+        if(!inp.value.trim())return;
+        const li=document.createElement("li");
+        li.textContent="• "+inp.value;
+        li.onclick=()=>li.remove();
+        document.getElementById("todoList").appendChild(li);
+        inp.value="";
+    }
+
+    function calcResult(){
+        try{
+            document.getElementById("calcOut").textContent=eval(document.getElementById("calc").value);
+        }catch{
+            document.getElementById("calcOut").textContent="Error 💥";
         }
-        setInterval(updateClock,1000);
-        updateClock();
-    </script>
+    }
+
+    function startTimer(){
+        let sec=parseInt(document.getElementById("timerSec").value);
+        const out=document.getElementById("timerOut");
+        if(isNaN(sec)||sec<=0){out.textContent="Enter valid seconds!";return;}
+        out.textContent="Running...";
+        const interval=setInterval(()=>{
+            out.textContent=sec+"s";
+            sec--;
+            if(sec<0){clearInterval(interval);out.textContent="⏰ Done!";}
+        },1000);
+    }
+
+    function convert(){
+        const cm=parseFloat(document.getElementById("conv").value);
+        if(isNaN(cm)){document.getElementById("convOut").textContent="Invalid";}
+        else document.getElementById("convOut").textContent=(cm/2.54).toFixed(2)+" inches";
+    }
+
+    function generateCalendar(){
+        const now=new Date();
+        const month=now.toLocaleString('default',{month:'long'});
+        const year=now.getFullYear();
+        let days="";
+        const d=new Date(year,now.getMonth()+1,0).getDate();
+        for(let i=1;i<=d;i++){
+            days+=`<span style="margin:2px;opacity:${i===now.getDate()?1:0.6};font-weight:${i===now.getDate()?'bold':'normal'};">${i}</span>`;
+        }
+        document.getElementById("calendar").innerHTML=`<b>${month} ${year}</b><br>${days}`;
+    }
+    generateCalendar();
+
+    const temp=(15+Math.floor(Math.random()*10));
+    const conds=["Sunny","Cloudy","Rainy","Windy","Chill"];
+    document.getElementById("weather").textContent=`🌦️ ${temp}°C | ${conds[Math.floor(Math.random()*conds.length)]}`;
+</script>
 </body>
 </html>
