--- a/main.html
+++ b/main.html
@@ -203,7 +203,7 @@
         <div class="tool">
             <h3>🎶 Music Player</h3>
             <audio controls style="width:100%;">
-                <source src="https://files.freemusicarchive.org/storage-freemusicarchive-org/tracks/yoS6Oa63RPdlAtboXHnNKXzIr6hD6j08D9vZzDqW.mp3" type="audio/mp3">
+                <source src="https://nu.vgmtreasurechest.com/soundtracks/3008-gamerip/mmbushfe/1.%20Monday%20Theme.mp3" type="audio/mp3">
             </audio>
         </div>
 
@@ -222,8 +222,8 @@
     setInterval(updateClock,1000);updateClock();
 
     const quotes=[
-        "“Stay freaky. Stay legendary.”",
-        "“Rizz never sleeps, only reloads.”",
+        "“Always stay freaky, Or else Chat GPT may touch you~”",
+        "“Rizz never sleeps, only reloads, or powernaps...”",
         "“Every tab you open is another reality.”",
         "“Mew your limits, gyatt your goals.”",
         "“Even Ohio can’t contain this energy.”"
@@ -235,7 +235,8 @@
         "I told my computer I needed a break—it said no problem, it’ll go to sleep.",
         "JavaScript developers never die, they just get undefined.",
         "CSS walked into a bar. A class was like 'You look so styled!'",
-        "Why did the AI date the user? It couldn’t resist the freaky vibes."
+        "Why did the AI date the user? It couldn’t resist the freaky vibes.",
+       "Why did The EOTH player use noob strat? Because He's a Fraud!!'",
     ];
     function newJoke(){document.getElementById("joke").textContent=jokes[Math.floor(Math.random()*jokes.length)];}
     newJoke();
