--- a/main.html
+++ b/main.html
@@ -110,7 +110,7 @@ button:hover{background:rgba(255,255,255,0.35);transform:scale(1.05);}
 <canvas id="bg"></canvas>
 
 <div class="navbar">
-  <h2>⚡ freaktab ULTRA MEGA++ Ω</h2>
+  <h2>freaktab ULTRA MEGA++ Ω</h2>
   <div class="nav-links">
     <a href="https://github.com" target="_blank">GitHub</a>
     <a href="https://youtube.com" target="_blank">YouTube</a>
@@ -123,7 +123,7 @@ button:hover{background:rgba(255,255,255,0.35);transform:scale(1.05);}
   <div class="clock" id="clock"></div>
 </div>
 
-<h1>Welcome back, Daddy 😎</h1>
+<h1>✨ BoomsunaLover221's New Tab ✨</h1>
 <div class="moodbar"></div>
 
 <div class="top-widgets">
